layout fixes for plant now being too long

--- a/client/src/components/plantNow.css
+++ b/client/src/components/plantNow.css
@@ -1,12 +1,15 @@
 .plant-now-cards {
-  grid-row: 3 / 4;
-  margin-left: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px;
   border-radius: 5px;
   overflow-x: auto;
-  max-width: 100%;
-  justify-content: center;
+  padding: 0px 10px;
+}
+
+.plant-now {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden
 }
